[tool.poetry]
name = "finalproject-kalenskiy-m25-555"
version = "0.1.0"
description = "Консольное приложение, имитирующее работу валютного кошелька"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "valutatrade_hub"}]

[tool.poetry.dependencies]
python = "^3.11"
prettytable = "^3.10.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"

[tool.poetry.scripts]
project = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["valutatrade_hub"]

